cmake_minimum_required(VERSION 3.10)

# set the project name and version
project(Examples VERSION 1.0)

# specify the C++ standard
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_subdirectory(example01)
add_subdirectory(example02)
add_subdirectory(example03)
add_subdirectory(example04)
add_subdirectory(example05)
add_subdirectory(example06)
add_subdirectory(example07)
add_subdirectory(example08)

